# esp32_esurfing

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  build.py  build.vbs  build_all.py  build_release.py  build_v55.py  create_wrappers.bat  create_wrappers.py  install_toolchain.py  install_tools.py  partitions.csv  sdkconfig.defaults  toolchain-clang-esp32c3.cmake  toolchain-clang.cmake
clang_wrappers/: riscv32-esp-elf-ar.cmd  riscv32-esp-elf-g++.cmd  riscv32-esp-elf-gcc.bat  riscv32-esp-elf-link.cmd  riscv32-esp-elf-objcopy.cmd  riscv32-esp-elf-objdump.bat  riscv32-esp-elf-readelf.bat  riscv32-esp-elf-size.bat  riscv32-esp-elf-strip.cmd
components/esurfing_core/: CMakeLists.txt
components/esurfing_core/inc/: DialerClient.h  NetClient.h  States.h  esp_port.h
components/esurfing_core/inc/utils/: Logger.h  PlatformUtils.h  Shutdown.h  SimThread.h  des_minimal.h  des_stub.h
components/esurfing_core/src/: DialerClient.c  NetClient.c  States.c
components/esurfing_core/src/cipher/impl/: aes_cbc.c  aes_ecb.c  desede_cbc.c  desede_ecb.c
components/esurfing_core/src/utils/: Logger.c  PlatformUtils.c  Shutdown.c  SimThread.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  web_config.c  web_config.h  wifi_manager.c  wifi_manager.h
spiffs_data/: ESurfingClient.json  config.json
